[package]
name = "bevy_egui"
version = "0.2.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
description = "A plugin for Egui integration into Bevy"
license = "MIT"
edition = "2018"
repository = "https://github.com/mvlabat/bevy_egui"
exclude = ["assets/**/*", ".github/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["manage_clipboard", "open_url"]
manage_clipboard = ["clipboard", "thread_local"]
open_url = ["webbrowser"]

[dependencies]
#bevy = { version = "0.4", default-features = false, features = ["render"] }
bevy = { git = "https://github.com/bevyengine/bevy", rev = "af6723156782b5579c90b4eac1fa49b1646dbaf5" } # commit on 2021-01-28
bevy_winit = { git = "https://github.com/bevyengine/bevy", rev = "af6723156782b5579c90b4eac1fa49b1646dbaf5" } # commit on 2021-01-28
egui = "0.9.0"
webbrowser = { version = "0.5.5", optional = true }
winit = { version = "0.24.0", features = ["x11"], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clipboard = { version = "0.5.0", optional = true }
thread_local = { version = "1.1.0", optional = true }

[[example]]
name = "ui"
path = "examples/ui.rs"
required-features = ["bevy/x11", "bevy/png", "bevy/bevy_wgpu"]

[package.metadata.docs.rs]
no-default-features = true # clipboard crate fails the build currently https://github.com/rust-lang/docs.rs/issues/695
